--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -57,18 +57,21 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="{{data.navItem1}}"
-                >{{data.navItem1}}</a
+                href="/Home"
+                >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{data.navItem2}}"
-                >{{data.navItem2}}</a
+              <a class="nav-link" href="/About"
+                >About</a
               >
               </li>
               {% if current_user.is_authenticated %}
                       <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('myPosts') }}">My Posts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('friends') }}">Friends</a>
