--- a/FlaskApp/templates/editPost.html
+++ b/FlaskApp/templates/editPost.html
@@ -1,8 +1,8 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+
+
 {% block main %}
-
-
-    <form class="bg-light w-50 m-auto rounded-4 p-3"  action="" method="POST">
+    <form class="bg-light w-50 m-auto rounded-4 p-3"  action="" method="post">
 
         {{ data.form.hidden_tag() }}
 
@@ -39,49 +39,11 @@
             <div class="form-group">
                 {{ data.form.privacy.label(class="form-control-label") }}
 
-                {% if data.form.privacy.errors %}
-                    {{ data.form.privacy(class="form-control is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in data.form.privacy.errors %}
-                        <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ data.form.privacy(class="form-control") }}
-                {% endif %}
+                {{ data.form.privacy(class="form-control") }}
             </div>
 
             <div class="form-group mb-3">
             {{ data.form.submit(class="btn btn-primary mt-2") }}
         </div>
     </form>
-      
-
-
-    <section class="posts p-4 w-50 d-flex flex-column justify-content-around align-items-center border-2 border-black ">
-
-      {% for post in data.posts %}
-      
-        <div class="post bg">
-          <h1>{{post.title}}</h1>
-        </div>
-
-      {% endfor %}
-    </section>
-
-
-
-    <section class="friends d-flex flex-column justify-content-around p-3 gap-4">
-        
-        {% for user in data.users %}
-            <div class="d-flex flex-column justify-content-around align-items-center bg-dark text-warning p-3 rounded-3">
-                <h4>{{user.username}}</h4>
-                <form action="/add_friend/{{current_user.id}}/{{user.id}}" method="post">
-                    <button type='submit' class="btn btn-outline-warning">Add</a>
-                </form>
-            </div>
-        {% endfor %}
-    </section>
-
-
 {% endblock %}
