--- a/FlaskApp/templates/base.html
+++ b/FlaskApp/templates/base.html
@@ -39,7 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mo3tasem</a>
+        <a class="navbar-brand" href="#">DMP</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -75,6 +75,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('friends') }}">Friends</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('friendsPosts') }}">Friends Posts</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
